# QuantSVCJ

./: MANIFEST.in  README.md  _quant_svcj.pyx  _svcj_impl.pyx  api.py  pyproject.toml  quantsvcj.py  requirements.txt  run.py  setup.py  svcj.c  svcj.h  svcj_kernel.c  svcj_kernel.h  svcj_wrapper.pyx  svcjmath.c  svcjmath.h
quantsvcj/: _c_wrapper.pyx  _quant_svcj.pyx  api.py  svcj.c  svcj.h
quantsvcj/quantsvcj/: __init__.py
src/: svcj_core.c  svcj_core.h
