[build-system]
requires = ["setuptools>=61.0.0", "wheel", "Cython>=0.29.30", "numpy>=1.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantSVCJ"
version = "6.0.0"
description = "SVCJ Engine with Full Surface Calibration"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]